# tool-exiftool

./: Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
src/app/: et_wrapper.rs
